water texture light

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>ThreeJS</title>
+    <title>bla</title>
 
     <meta name="description" content="ThreeJS Boilerplate">
     <meta name="author" content="Nicolas Bouvet">
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+
 </body>
 
+</html>
 </html>
